1.21.8 (#1785)
* 1.21.6
Set world to null in unload

* 1.21.8

* Fix hats and maps

* Update GitHub Actions permissions to enable write access for pull requests and issues