@@ -1,24 +1,24 @@
 package me.mykindos.betterpvp.core.framework.hat;
 
-import com.comphenix.protocol.wrappers.EnumWrappers;
-import com.comphenix.protocol.wrappers.Pair;
 import com.destroystokyo.paper.event.player.PlayerArmorChangeEvent;
+import com.github.retrooper.packetevents.PacketEvents;
+import com.github.retrooper.packetevents.protocol.item.ItemStack;
+import com.github.retrooper.packetevents.protocol.player.Equipment;
+import com.github.retrooper.packetevents.protocol.player.EquipmentSlot;
+import com.github.retrooper.packetevents.wrapper.play.server.WrapperPlayServerEntityEquipment;
+import com.github.retrooper.packetevents.wrapper.play.server.WrapperPlayServerSetSlot;
 import com.google.inject.Inject;
+import io.github.retrooper.packetevents.util.SpigotConversionUtil;
 import me.mykindos.betterpvp.core.Core;
-import me.mykindos.betterpvp.core.framework.adapter.PluginAdapter;
 import me.mykindos.betterpvp.core.listener.BPvPListener;
-import me.mykindos.betterpvp.core.packet.play.clientbound.WrapperPlayServerEntityEquipment;
-import me.mykindos.betterpvp.core.packet.play.clientbound.WrapperPlayServerSetSlot;
 import me.mykindos.betterpvp.core.utilities.UtilServer;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
-import org.bukkit.inventory.ItemStack;
 
-import java.util.List;
+import java.util.Collections;
 
 @BPvPListener
-@PluginAdapter("ProtocolLib")
 public class HatProtocol implements Listener {
 
     @Inject
@@ -26,23 +26,27 @@ public class HatProtocol implements Listener {
 
     public void broadcast(Player wearer, boolean others) {
         // We broadcast player's helmet because RemapperOut maps it to the hat item after
-        final ItemStack helmet = wearer.getInventory().getHelmet();
+        final org.bukkit.inventory.ItemStack vanillaItem = wearer.getInventory().getHelmet();
+        final ItemStack helmet = SpigotConversionUtil.fromBukkitItemStack(vanillaItem);
 
         if (others) {
             // Others, including self
-            final WrapperPlayServerEntityEquipment packet = new WrapperPlayServerEntityEquipment();
-            packet.setEntity(wearer.getEntityId());
-            packet.setSlots(List.of(new Pair<>(EnumWrappers.ItemSlot.HEAD, helmet)));
-            packet.broadcastPacket();
-        } else {
-            // Just send to self
-            final WrapperPlayServerSetSlot packet2 = new WrapperPlayServerSetSlot();
-            packet2.setContainerId(0); // Allows changing player inventory
-            packet2.setSlot(5);
-            packet2.setItemStack(helmet);
-            packet2.sendPacket(wearer);
+            final WrapperPlayServerEntityEquipment packet = new WrapperPlayServerEntityEquipment(
+                    wearer.getEntityId(),
+                    Collections.singletonList(new Equipment(EquipmentSlot.HELMET, helmet))
+            );
+
+            for (Player player : wearer.getTrackedBy()) {
+                PacketEvents.getAPI().getPlayerManager().getUser(player).sendPacket(packet);
+            }
         }
 
+        // Just send to self
+        final WrapperPlayServerSetSlot packet2 = new WrapperPlayServerSetSlot(0,
+                0, // Allows changing player inventory
+                5,
+                helmet);
+        PacketEvents.getAPI().getPlayerManager().getUser(wearer).sendPacket(packet2);
     }
 
     @EventHandler
